@@ -1,3 +1,13 @@
+2008-10-17 Jens Tkotz <jens@peino.de> 1.5.10-svn-b5
+
+ * Fix: With emailing on an error appeared after recreating thumbs.
+
+ Thanks to MrC from forums.
+
+ * Fix: Voting in thumbsview broken.
+
+ Thanks to adegutis from forums.
+
 2008-09-28 Jens Tkotz <jens@peino.de> 1.5.10-svn-b4
 
  * Fix: Convert newlines in RSS in the same way as in the albums view.
